--- a/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5/dragonv5_main_summary.html
+++ b/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5/dragonv5_main_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>dragonv5_main Project Status (02/06/2018 - 23:33:03)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>dragonv5_main Project Status (02/07/2018 - 00:42:55)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>DragonHDL5.xise</TD>
@@ -25,7 +25,7 @@ No Errors</TD>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\_xmsgs/*.xmsgs?&DataKey=Warning'>519 Warnings (15 new)</A></TD>
+<TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\_xmsgs/*.xmsgs?&DataKey=Warning'>520 Warnings (80 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
@@ -39,7 +39,8 @@ No Errors</TD>
 <TD><A HREF_DISABLED='Xilinx Default (unlocked)?&DataKey=Strategy'>Xilinx Default (unlocked)</A></TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Timing Constraints:</B></LI></UL></TD>
 <TD>
-<A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\dragonv5_main.ptwx?&DataKey=ConstraintsData'>All Constraints Met</A></TD>
+<font color="red"; face="Arial"><b>X </b></font>
+<A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\dragonv5_main.ptwx?&DataKey=ConstraintsData'>1 Failing Constraint</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Environment:</B></dif></TD>
@@ -48,7 +49,7 @@ No Errors</TD>
 System Settings</A>
 </TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Final Timing Score:</B></LI></UL></TD>
-<TD>0 &nbsp;<A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\dragonv5_main.twx?&DataKey=XmlTimingReport'>(Timing Report)</A></TD>
+<TD>1791 &nbsp;<A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\dragonv5_main.twx?&DataKey=XmlTimingReport'>(Timing Report)</A></TD>
 </TR>
 </TABLE>
 
@@ -90,19 +91,19 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice LUTs</TD>
-<TD ALIGN=RIGHT>10,936</TD>
+<TD ALIGN=RIGHT>10,901</TD>
 <TD ALIGN=RIGHT>63,288</TD>
 <TD ALIGN=RIGHT>17%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as logic</TD>
-<TD ALIGN=RIGHT>9,803</TD>
+<TD ALIGN=RIGHT>9,804</TD>
 <TD ALIGN=RIGHT>63,288</TD>
 <TD ALIGN=RIGHT>15%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O6 output only</TD>
-<TD ALIGN=RIGHT>6,389</TD>
+<TD ALIGN=RIGHT>6,388</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -114,7 +115,7 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O5 and O6</TD>
-<TD ALIGN=RIGHT>2,537</TD>
+<TD ALIGN=RIGHT>2,539</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -204,19 +205,19 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used exclusively as route-thrus</TD>
-<TD ALIGN=RIGHT>871</TD>
+<TD ALIGN=RIGHT>835</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number with same-slice register load</TD>
-<TD ALIGN=RIGHT>804</TD>
+<TD ALIGN=RIGHT>755</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number with same-slice carry load</TD>
-<TD ALIGN=RIGHT>64</TD>
+<TD ALIGN=RIGHT>77</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -228,38 +229,38 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of occupied Slices</TD>
-<TD ALIGN=RIGHT>4,699</TD>
+<TD ALIGN=RIGHT>4,767</TD>
 <TD ALIGN=RIGHT>15,822</TD>
-<TD ALIGN=RIGHT>29%</TD>
+<TD ALIGN=RIGHT>30%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of MUXCYs used</TD>
-<TD ALIGN=RIGHT>3,460</TD>
+<TD ALIGN=RIGHT>3,512</TD>
 <TD ALIGN=RIGHT>31,644</TD>
-<TD ALIGN=RIGHT>10%</TD>
+<TD ALIGN=RIGHT>11%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of LUT Flip Flop pairs used</TD>
-<TD ALIGN=RIGHT>14,363</TD>
+<TD ALIGN=RIGHT>14,446</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number with an unused Flip Flop</TD>
-<TD ALIGN=RIGHT>3,907</TD>
-<TD ALIGN=RIGHT>14,363</TD>
+<TD ALIGN=RIGHT>3,937</TD>
+<TD ALIGN=RIGHT>14,446</TD>
 <TD ALIGN=RIGHT>27%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number with an unused LUT</TD>
-<TD ALIGN=RIGHT>3,427</TD>
-<TD ALIGN=RIGHT>14,363</TD>
-<TD ALIGN=RIGHT>23%</TD>
+<TD ALIGN=RIGHT>3,545</TD>
+<TD ALIGN=RIGHT>14,446</TD>
+<TD ALIGN=RIGHT>24%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of fully used LUT-FF pairs</TD>
-<TD ALIGN=RIGHT>7,029</TD>
-<TD ALIGN=RIGHT>14,363</TD>
+<TD ALIGN=RIGHT>6,964</TD>
+<TD ALIGN=RIGHT>14,446</TD>
 <TD ALIGN=RIGHT>48%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
@@ -504,7 +505,7 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Average Fanout of Non-Clock Nets</TD>
-<TD ALIGN=RIGHT>3.74</TD>
+<TD ALIGN=RIGHT>3.73</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -517,7 +518,7 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='4'><B>Performance Summary</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=PerformanceSummary"><B>[-]</B></a></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Final Timing Score:</B></TD>
-<TD>0 (Setup: 0, Hold: 0, Component Switching Limit: 0)</TD>
+<TD>1791 (Setup: 1791, Hold: 0, Component Switching Limit: 0)</TD>
 <TD BGCOLOR='#FFFF99'><B>Pinout Data:</B></TD>
 <TD COLSPAN='2'><A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\dragonv5_main_par.xrpt?&DataKey=PinoutData'>Pinout Report</A></TD>
 </TR>
@@ -530,7 +531,8 @@ System Settings</A>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Timing Constraints:</B></TD>
 <TD>
-<A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\dragonv5_main.ptwx?&DataKey=ConstraintsData'>All Constraints Met</A></TD>
+<font color="red"; face="Arial"><b>X </b></font>
+<A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\dragonv5_main.ptwx?&DataKey=ConstraintsData'>1 Failing Constraint</A></TD>
 <TD BGCOLOR='#FFFF99'><B>&nbsp;</B></TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TABLE>
@@ -541,21 +543,21 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\dragonv5_main.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>‰Î 2 6 23:13:38 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\_xmsgs/xst.xmsgs?&DataKey=Warning'>336 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\_xmsgs/xst.xmsgs?&DataKey=Info'>180 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\dragonv5_main.bld'>Translation Report</A></TD><TD>Current</TD><TD>‰Î 2 6 23:14:00 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\_xmsgs/ngdbuild.xmsgs?&DataKey=Warning'>15 Warnings (15 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\_xmsgs/ngdbuild.xmsgs?&DataKey=Info'>11 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\dragonv5_main_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>‰Î 2 6 23:23:40 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\_xmsgs/map.xmsgs?&DataKey=Warning'>67 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\_xmsgs/map.xmsgs?&DataKey=Info'>10 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\dragonv5_main.par'>Place and Route Report</A></TD><TD>Current</TD><TD>‰Î 2 6 23:31:22 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\_xmsgs/par.xmsgs?&DataKey=Warning'>37 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\dragonv5_main.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>… 2 7 00:25:59 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\_xmsgs/xst.xmsgs?&DataKey=Warning'>336 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\_xmsgs/xst.xmsgs?&DataKey=Info'>180 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\dragonv5_main.bld'>Translation Report</A></TD><TD>Current</TD><TD>… 2 7 00:26:18 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\_xmsgs/ngdbuild.xmsgs?&DataKey=Warning'>15 Warnings (15 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\_xmsgs/ngdbuild.xmsgs?&DataKey=Info'>11 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\dragonv5_main_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>… 2 7 00:35:06 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\_xmsgs/map.xmsgs?&DataKey=Warning'>67 Warnings (64 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\_xmsgs/map.xmsgs?&DataKey=Info'>10 Infos (2 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\dragonv5_main.par'>Place and Route Report</A></TD><TD>Current</TD><TD>… 2 7 00:41:12 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\_xmsgs/par.xmsgs?&DataKey=Warning'>38 Warnings (1 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\dragonv5_main.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>‰Î 2 6 23:31:52 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\_xmsgs/trce.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\dragonv5_main.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>‰Î 2 6 23:32:58 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>64 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\_xmsgs/bitgen.xmsgs?&DataKey=Info'>1 Info (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\dragonv5_main.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>… 2 7 00:41:43 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\_xmsgs/trce.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\dragonv5_main.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>… 2 7 00:42:49 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>64 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\_xmsgs/bitgen.xmsgs?&DataKey=Info'>1 Info (0 new)</A></TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>‰Î 2 6 23:32:59 2018</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>‰Î 2 6 23:33:03 2018</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>… 2 7 00:42:50 2018</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>… 2 7 00:42:55 2018</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 02/06/2018 - 23:33:03</center>
+<br><center><b>Date Generated:</b> 02/07/2018 - 00:42:55</center>
 </BODY
